5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1807_2569.log
== TEST (2019-06-11 15:55:44) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)

for i range(size(vet)):
	d=d+(((vet[i]-media)**2)/size(vet)-1)**0,5
	
print(round(d, 3))	
-- ERROR:
File "XXXX", line 7
    for i range(size(vet)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:55:54) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)

for i in range(size(vet)):
	d=d+(((vet[i]-media)**2)/size(vet)-1)**0,5
	
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:56:25) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0
for i in range(size(vet)):
	d=d+(((vet[i]-media)**2)/size(vet)-1)**0,5
	
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:57:31) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)

for i in range(size(vet)):
	
	d=d+(((i-media)**2)/size(vet)-1)**0,5
	
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:57:47) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0
for i in range(size(vet)):
	
	d=d+(((i-media)**2)/size(vet)-1)**0,5
	
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:58:16) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0
for i in range(size(vet)):
	
	d=d+(((i-media)**2)/size(vet)-1)**0,5
	
print(d)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:01:23) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0
for i in range(size(vet)):
	d=d+(((i-media)**2)/size(vet)-1)**0,5
	
print(d)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:01:57) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0
for i in range(size(vet)):
	d=d+(((i-media)**2)/size(vet)-1)**0.5
	
print(d)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:02:19) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0
for i in range(size(vet)):
	d=d+(((i-media)**2)/size(vet)-1)**0.5
	
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:03:35) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0
for i in range(size(vet)):
	d=d+(((i-media)**2)/size(vet)-1)

d=d**0.5	
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:05:19) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0

for i in range(size(vet)):
	d=d+(((i-media)**2)/size(vet)-2)

d=d**0.5	
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:07:46) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0
n=size(vet)-1
for i in range(size(vet)):
	d=d+((i-media)**2)/n-1

d=d**0.5	
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:08:36) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0

for i in range(size(vet)):
	d=d+((i-media)**2)/size(vet)-1

d=d**0.5	
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:09:32) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0

for i in range(size(vet)):
	d=d+((i-media)**2)/size(vet)-1

d=d**1/2
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:09:44) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
d=0

for i in range(size(vet)):
	d=d+((i-media)**2)/size(vet)-1

d=d**(1/2)
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:11:01) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:11:25) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:11:46) 
-- CODE:
from numpy import *

vet=array(float(eval(input("...: "))))

media=sum(vet)/size(vet)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:12:05) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))
float(vet)
media=sum(vet)/size(vet)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:12:14) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))
float(vet)
media=sum(vet)/size(vet)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:12:44) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))
vet=float(vet)
media=sum(vet)/size(vet)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:13:10) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

media=sum(vet)/size(vet)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:13:43) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

d=0

for i in range(size(vet)):
	d=d+((i-media)**2)/size(vet)-1

d=d**(1/2)
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:14:32) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

d=0
media=sum(vet)/size(vet)
for i in range(size(vet)):
	d=d+((i-media)**2)/size(vet)-1

d=d**(1/2)
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:08:48) 
-- CODE:
from numpy import *

vet=array(eval(input("...: ")))

d=0
media=sum(vet)/size(vet)
for i in range(size(vet)):
	d=d+((i-media)**2)

d=d/size(vet)-1	
d=d**(1/2)
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:10:00) 
-- CODE:
from numpy import *
from math import *
vet=array(eval(input("...: ")))

d=0
media=sum(vet)/size(vet)
for i in range(size(vet)):
	d=d+((i-media)**2)/size(vet)-1


d=sqrt(d)
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:11:11) 
-- CODE:
from numpy import *
from math import *
vet=array(eval(input("...: ")))

d=0
media=sum(vet)/size(vet)
for i in range(size(vet)):
	d=d+((vet[i]-media)**2)/size(vet)-1


d=sqrt(d)
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:12:21) 
-- CODE:
from numpy import *
from math import *
vet=array(eval(input("...: ")))

d=0
media=sum(vet)/size(vet)
for i in range(size(vet)):
	d=d+((vet[i]-media)**2)


d=sqrt(d/size(vet)-1)
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:13:36) 
-- CODE:
from numpy import *
from math import *
vet=array(eval(input("...: ")))

d=0
media=sum(vet)/size(vet)
for i in range(size(vet)):
	d=d+(vet[i]-media)**2


d=sqrt(d/size(vet)-1)
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:14:25) 
-- CODE:
from numpy import *
from math import *
vet=array(eval(input("...: ")))

d=0
media=sum(vet)/size(vet)
for i in range(size(vet)):
	d=d+(vet[i]-media)**2


d=sqrt(d/(size(vet)-1))
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:15:17) 
-- CODE:
from numpy import *
from math import *
vet=array(eval(input("...: ")))

d=0
media=sum(vet)/size(vet)
for i in range(size(vet)):
	d=d+(vet[i]-media)**2


d=sqrt(d/(size(vet)-1))
print(round(d, 3))	
-- EXECUTION TIME:
1.21633
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:15:41) 
-- CODE:
from numpy import *
from math import *
vet=array(eval(input("...: ")))

d=0
media=sum(vet)/size(vet)
for i in range(size(vet)):
	d=d+(vet[i]-media)**2


d=(d/(size(vet)-1))**(1/2)
print(round(d, 3))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
